--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="edit_todo">Edit Todo</string>
     <string name="add_todo">Add Todo</string>
     <string name="delete_todo">Delete Todo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_title">Title</string>
+    <string name="hint_description">Description</string>
+    <string name="helper_title">The title for the Todo</string>
+    <string name="helper_description">A small description for the todo</string>
+    <string name="checkbox_done">Done</string>
+    <string name="valid_todo_menu">Validate</string>
 </resources>
